--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   http: ^0.12.0+2
   url_launcher: ^5.0.2
   path_provider: ^1.1.0
-  json_table: ^0.3.0
+  connectivity:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
