--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   path_provider: ^1.1.0
   connectivity: ^0.3.2
   android_alarm_manager:  ^0.2.3
-  json_serializable: ^3.0.0
+  json_annotation:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,7 +36,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  json_serializable: ^3.0.0
+  build_runner: ^1.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
