--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   connectivity: ^0.3.2
   android_alarm_manager:  ^0.2.3
   json_annotation: ^2.0.0
+  localstorage: ^2.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
