--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  progress_dialog: ^1.1.0+1
   toast: ^0.1.4
   grouped_buttons: ^1.0.4
   flutter:
