--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  progress_dialog: ^1.1.0+1
   toast: ^0.1.4
   grouped_buttons: ^1.0.4
   flutter:
@@ -57,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/hpgovt.png
+   - assets/waiting.gif
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
